--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -64,7 +64,7 @@
             <div class="card-body">
               <h5 class="card-title"> Correspondencia escolar.</h5>
               <p class="card-text">
-                Se anuncia la creación del nuevo equipo de Correspondencia escolar. Este equipo se encargará de la recepción y envío de los documentos en UTEL. Los integrantes del equipo son: <br/>
+                Se anuncia la creación del nuevo equipo de Correspondencia escolar. Este equipo se encargará de la recepción y envío de los documentos en Utel. Los integrantes del equipo son: <br/>
                 -Carlos Eduardo Barrera Sanabria (turno matutino  y responsable del área)<br/>
                 -Carlos Fernando Jiménez Huicochea (turno matutino) <br/>
                 -Erick Abdul Cureño Castillo (Turno Vespertino) <br/>
