--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -71,6 +71,7 @@
                                   <img src="img/titulacion/certi-apost2.png " class="d-block w-100" alt="...">
                                 </div>
                               </div>
+                              
                               <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
@@ -462,10 +463,10 @@
       <!--Equivalencia academica USA-->
       <div class="bloque">
         <div class="card border-0 py-3 px-3" >
-            <h4><b>Doble reconocimiento con Estados Unidos</b></h4></br>
+            <h4><b>Equivalencia academica USA</b></h4></br>
             
             <a>
-                Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de UTEL en territorio 
+                Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de Utel en territorio 
                 estadounidense, disfrutando de los mismos beneficios y condiciones tales como:</br></br>
 
                 -Continuar sus estudios en una universidad norteamericana.</br>
@@ -481,7 +482,7 @@
           <h4><b>Proceso</b></h4></br>
           
           <a>
-              Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de UTEL en territorio 
+              Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de Utel en territorio 
               estadounidense, disfrutando de los mismos beneficios y condiciones tales como:</br></br>
 
               -Continuar sus estudios en una universidad norteamericana.</br>
@@ -491,19 +492,19 @@
               -Realizar trámites migratorios o certificación laboral.</br></br>    
               
               
-              La gestión del trámite se lleva a cabo directamente en UTEL y solo se podrá iniciar una vez que tengas
+              La gestión del trámite se lleva a cabo directamente en Utel y solo se podrá iniciar una vez que tengas
               tu Título o Grado académico avalado por la SEP apostillado en México y solicites el trámite que
               consiste en:
 
-              <h6>1. Llenar la Solicitud de Convalidación de Título de UTEL en USA.</h6></br></br>    
+              <h6>1. Llenar la Solicitud de Convalidación de Título de Utel en USA.</h6></br></br>    
               <h6>2. Pagar el costo correspondiente al trámite, que incluye:</h6></br></br>    
                 -Envío de documentos a USA</br> 
-                -Traducción oficial del Título de UTEL (en USA)</br> 
+                -Traducción oficial del Título de Utel (en USA)</br> 
                 -Procedimiento de revalidación ante Agencia Acreditadora (en USA)</br> 
                 -Resultado: Informe de Equivalencia</br> 
                 -Legalización ante Notario Público</br> 
                 -Apostilla de la Convención de La Haya para el Informe de Equivalencia (emitida en USA)</br> 
-                -Envío de documentos a UTEL</br> 
+                -Envío de documentos a Utel</br> 
                 
 
           </a>
@@ -548,7 +549,7 @@
             <a>
                 Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Convalidación en su país de origen, 
                 que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y 
-                certificado de estudios UTEL.                  
+                certificado de estudios Utel.                  
             </a>
 
             <div class="framedoc m-5">
