--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -55,7 +55,7 @@
           <a href="serviciosocial#SSart91" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(7)">Servicio social por articulo 91</a>
           <a href="serviciosocial#SSart52" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(8)">Servicio social por articulo 52</a>
           <a href="serviciosocial#SSconcausa" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(9)">Servicio social con causa</a>
-          <a href="serviciosocial#SScoach" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(10)">Servicio social en UTEL como coach universitario</a>
+          <a href="serviciosocial#SScoach" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(10)">Servicio social en Utel como coach universitario</a>
           <a href="serviciosocial#SStrabajo" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(11)">Trabajo colaborativo</a>
         </div>
         
@@ -73,7 +73,7 @@
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="recolecdocs">
           <img src="Img/Documentos_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Recoleción de documentos</h5>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación UTEL</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación Utel</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos nacionales?</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos LATAM?</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Legalización</a>
@@ -94,7 +94,7 @@
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="manuales">
           <img src="Img/Manual_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Recoleción de documentos</h5>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación UTEL</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación Utel</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos nacionales?</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos LATAM?</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Legalización</a>
