--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -8,7 +8,7 @@
       <div class="row">
 
         <div class="col-lg-9 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Mision UTEL</h5>
+          <h5 class="text-uppercase">Misión Utel</h5>
 
           <p>
               Nuestra misión es proporcionar oportunidades de aprendizaje innovador y de alta calidad que conduzca a la obtención de un
@@ -40,7 +40,7 @@
     </div>
 
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      UTEL
+      Utel
     </div>
 
   </footer>
