--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -293,7 +293,7 @@
                   <h6><b>Si yo entré por equivalencia, ¿ya no tengo que hacer servicio social?</b></h6>
                   <a>
                     El servicio social no se hace equivalente, ya que lo realizaste para otra institución y en otro
-                     momento, además que los oficios requieren estar dirigidos a la UTEL.
+                     momento, además que los oficios requieren estar dirigidos a la Utel.
                   </a>
 
                 </div>
@@ -323,7 +323,7 @@
 
                 <div class="pf card border-0 py-3 px-3" id="SSUTEL" >
                   
-                  <h6><b>¿Puedo hacer el servicio social en UTEL?</b></h6>
+                  <h6><b>¿Puedo hacer el servicio social en Utel?</b></h6>
                   <a>
                     Si, actualmente tenemos disponible únicamente el programa coach universitario, el cual
                     consiste en brindar acompañamiento y apoyo a los estudiantes de nuevo ingreso.</br>
@@ -360,16 +360,25 @@
                     
                     <h6><b>¿Qué es una dictaminación de un documento?</b></h6>
                     <a>
-                        Formalmente es el documento escrito que acredita y justifica el cumplimiento de un requisito de trámite procesal legislativo.
+                      Formalmente es el documento escrito que acredita y justifica el cumplimiento de un requisito de trámite procesal legislativo.
                     </a>    
 
                   </div>
 
                   <div class="pf card border-0 py-3 px-3" id="" >
                     
-                    <h6><b>  </b></h6>
+                    <h6><b>¿Qué documentos requiren legalización?</b></h6>
                     <a>
-                        
+                      La documentación ya no se solicita legalizada a menos que se realice un trámite de equivalencia se solicitara el certificado parcial legalizado, muchos documentos ya tienen leyendas incluidas que no lo requieren.
+                    </a>    
+
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="" >
+                    
+                    <h6><b>¿Otra persona puede recoger mi documentación?</b></h6>
+                    <a>
+                      
                     </a>    
 
                   </div>
@@ -379,14 +388,197 @@
                 
               </div>  
 
-              <!--Escolares-->   
+              <!--Escolares-->
               <div class="bloque" id="bloquePreguntasFrecuentesEscolares">
 
+                 <div class="pf card border-0 py-3 px-3" id="">
+                    
+                    <h6><b>Constancia de estudios</b></h6>
+                     
+                     <br/>
+
+                    <a>
+                      Constancia de estudios <br/>
+                      Documento que hace constar que el alumno se encuentra actualmente inscrito en la universidad.<br/><br/>
+
+                      Constancia de Pago<br/>
+                      Indica los pagos que ha realizado el alumno y los que tiene pendientes.<br/><br/>
+
+                      Para realizar el trámite de constancia se necesita:<br/><br/>
+
+                      -Tener tu documentación física (acta de nacimiento y certificado de bachillerato)<br/><br/>
+
+                      -Tener tus pagos al corriente<br/><br/>
+
+                      Realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500 o con la referencia de tus pagos de colegiatura. Si realizas tu pago por otro medio deberás solicitar el trámite a tutoría enviando tu comprobante de pago.<br/><br/>
+
+                      Nota: Si realizas tu pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
+                      *En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
+
+                    </a>
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="">
+                    
+                    <h6><b>Constancia de estudios</b></h6>
+                     
+                     <br/>
+
+                    <a>
+                      Constancia de estudios <br/>
+                      Documento que hace constar que el alumno se encuentra actualmente inscrito en la universidad.<br/><br/>
+
+                      Constancia de Pago<br/>
+                      Indica los pagos que ha realizado el alumno y los que tiene pendientes.<br/><br/>
+
+                      Para realizar el trámite de constancia se necesita:<br/><br/>
+
+                      -Tener tu documentación física (acta de nacimiento y certificado de bachillerato)<br/><br/>
+
+                      -Tener tus pagos al corriente<br/><br/>
+
+                      Realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500 o con la referencia de tus pagos de colegiatura. Si realizas tu pago por otro medio deberás solicitar el trámite a tutoría enviando tu comprobante de pago.<br/><br/>
+
+                      Nota: Si realizas tu pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
+                      *En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
+
+                    </a>
+                  </div>
+
+                  
+
+              </div>
+
+              <div class="pf card border-0 py-3 px-3" id="">
+                    
+                  <h6><b>Documentos para revalidación - Lic.</b></h6>
+
+                  <br/>
+
+                  <a>
+                    Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aun no tienes Resolución de Revalidación de bachillerato.<br/><br/>
+
+                    Los documentos en físico que necesitamos para darte de alta en SEP son:<br/><br/>
+
+                    Acta de nacimiento original si tu documento fue emitido en el extranjero debe tener apostilla o legalización.<br/><br/>
+
+                    Resolución de Revalidación de bachillerato emitido por la Secretaría de Educación Pública. 
+                    Copia de identificación (INE o Pasaporte)<br/><br/>
+
+                    En caso de no tener *Resolución de Revalidación es necesario proporcionar para trámite.<br/><br/>
+
+                    Certificado o diploma de bachillerato o equivalente legalizado o apostillado.<br/><br/>
+
+                    Historia académica (tira de materias con calificaciones obtenidas)<br/><br/>
+
+                    Plan de estudio de bachiller<br/><br/>
+
+                    Carta poder llena con firma autógrafa.<br/><br/>
+
+                    En caso de que los documentos sean en idioma diferente al español, traducción de Perito traductor.<br/><br/>
+
+                    Realizar pago gestión de trámite $3,000.00<br/><br/>
+
+                    Copia de identificación (INE o Pasaporte)<br/><br/>
+
+                    El pago lo realizas en la página de siu-utl.scalahed.com en la etiqueta de tramites en línea, si realizas tu pago por otro medio solicita el trámite a tutoría enviando tu comprobante de pago.<br/><br/>
+                  </a>
               </div>
 
               <!--Tutoria-->   
               <div class="bloque" id="bloquePreguntasFrecuentesTutoria">
+
+                <div class="pf card border-0 py-3 px-3" id="">
+                  
+                  <h6><b>¿Cómo realizo un cambio de Licenciatura?</b></h6>
+                  <br/>
+                  <a>
+                    En este procedimiento el alumno solicita cambiar a una carrera diferente de la que inició, para realizar el trámite se necesita el formato de cambio de carrera firmado y el pago por la gestión del trámite con costo de $1500.<br/><br/>
+
+                    Si ya cuentas con avance curricular y la nueva carrera tiene materias que ya cursaste se hará una equivalencia interna y no tendrás que cursarlas nuevamente.<br/><br/>
+
+                    Para iniciar el trámite realiza tu pago en trámites en línea en la página de siu-utl.scalahed.com  y manda tu formato a tu tutor.<br/><br/>
+
+                    Nota: La solicitud de cambio de carrera se debe realizar 2 semanas antes del inicio del bimestre.<br/><br/>
+                  </a>
+                </div>
+
+                <div class="pf card border-0 py-3 px-3" id="">
+                    
+                    <h6><b>¿Cómo puedo ver el avance curricular?</b></h6>
+                    <br/>
+                    
+                    <a>
+                      Primero debes entrar a siu-utl.scalahed.com<br/>
+                      En el apartado de "Programas inscritos" en la parte inferior encontrarás la opción de avance curricular.<br/>
+                      <img src="img/busqueda/avance.png" alt=""><br/>
+                      En el mismo apartado también encontrarás tu historial académico, las calificaciones se actualizan aproximadamente 2 semanas después del cierre del aula virtual.
+                    </a>
+                </div>
+
+                <div class="pf card border-0 py-3 px-3" id="">
+                    
+                    <h6><b>Requisitos de la jornada Super intensiva para Licenciatura</b></h6>
+
+                    <br/>
+
+                    <a>
+                      La duración de la Licenciatura en Jornada Super Intensiva es de 2 años 2 meses.<br/>
+                      Para Derecho la duración de la Licenciatura es de 2 años 8 meses.<br/>
+
+                      Requisitos para la jornada Super intensiva<br/>
+
+                      -Aplica para alumnos inscritos a partir del 2018.<br/>
+
+                      -Tener promedio mayor a 8 en Bachillerato.<br/>
+
+                      -Documentación original y digital completa.<br/>
+
+                      -No tener materias reprobadas y tener los pagos al corriente (en caso de tener avance curricular)<br/>
+
+                      -Domiciliando se obtiene el 5% de descuento adicional.<br/>
+
+                      -En caso de tener promedio inferior a 8 en Bachillerato pueden ingresar a esta jornada realizando un pago anual.<br/>
+
+                      -Para alumnos de nuevo ingreso iniciarán con 2 materias por bimestre, a partir del tercer cuatrimestre (6o bimestre) tendrán 4 materias por bimestre.<br/>
+
+                      Nota: Esta jornada no cubre el pago de asistencia, título, cédula e inglés,  en caso de que su esquema de pago actual lo cubra al cambiarse los perderá, se debe revisar con Finanzas para saber si habrá ajuste por estos conceptos.<br/>
+                    </a>
+                </div>
+
+                <div class="pf card border-0 py-3 px-3" id="">
+                    
+                    <h6><b>¿Cómo ingreso al Sistema de Información Universitaria (SIU)?</b></h6>
+
+                    <br/>
+
+                    <a>
+                      1.- Para acceder al sistema ingresa la liga siu-utl.scalahed.com<br/>
+                      2.-Ingresa la matrícula y contraseña que se te hizo llegar por correo<br/>
+                      3.-Solo al ingresar por primera vez, el sistema te pedirá actualizar tu contraseña. (Debe ser alfanumérica, contener mínimo 6, máximo 8 dígitos  y sin caracteres especiales)<br/>
+                      4.-Al realizar este proceso podrás acceder al sistema<br/>
+                      A continuación encontrarás un video tutorial de la información a la que tendrás acceso en SIU.<br/>
+                    </a>
+                </div>
+
+                <div class="pf card border-0 py-3 px-3" id="">
+                    
+                    <h6><b>Pago de incorporación SEP</b></h6>
+
+                    <br/>
+
+                    <a>
+                      Como normativa de la Secretaría de Educación Pública, cada fin de cuatrimestre se deben validar los estudios ante la Dirección General de Acreditación, Incorporación y Revalidación.<br/>
+
+                      Para efectuar la gestión es necesario realizar el pago de incorporación que tiene un costo de $700 en licenciaturas y $800 en maestrías, deberá ser efectuado dentro de los 30 días siguientes al inicio del ciclo escolar. <br/>
+
+                      Dicha normativa se encuentra en el acuerdo número 279 por el que se establecen los trámites y procedimientos relacionados con el reconocimiento de validez oficial de estudios del tipo superior.<br/>
+                    </a>
+                </div>
+
+
               </div>
+
             </div>
          </div>
       </div>
