--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -5,7 +5,7 @@
       <ul class="ul container">
         <div class="row text-center">
           <div class="col">
-            <li class="li activo">Documentación UTEL</li>
+            <li class="li activo">Documentación Utel</li>
           </div>
           <div class="col">
             <li class="li">Documentación tipos de ingreso</li>
@@ -31,8 +31,8 @@
 
             <a>
               Con la documentación física se realiza la inscripción oficial ante el sistema educativo (SEP) y desde ese
-              momento se registran las calificaciones del estudiante periodo a periodo.
-              De tal manera que al aprobar las materias y servicio social EL ESTUDIANTE tiene derecho a Título y
+              momento se registran las calificaciones del alumno periodo a periodo.
+              De tal manera que al aprobar las materias y servicio social EL alumno tiene derecho a Título y
               Cédula.</br></br>
 
               Los documentos físicos originales deben estar en perfectas condiciones:</br></br>
@@ -703,29 +703,21 @@
                       <div class="row">
                         <div class="col">
 
-                          <strong>Documentación para Alianzas:</strong> </br></br>
-                       
                         </div>
 
                         <div class="col">
-                          <strong>Manuales de validación</strong></br>
-                          <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como validar un
-                            CURP?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
-                            validar un acta de nacimiento?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
-                            validar un carta compromiso?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
-                            validar un antecedente academico?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
-                            validar una identificación oficial?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
-                            validar un comprobante de docmicilio?</a>
+                          
+                        </div>
+
+                        <div class="col">
+                          
+                        </div>
+
+                        <div class="col">
+                          
                         </div>
                       </div>
                     </div>
-
-
                   </div>
 
                 </div>
@@ -753,7 +745,7 @@
               <h4><b>¿Qué son los tipos de ingreso?</b></h4></br>
 
               <a>
-                Para ingresar a cursar un grado académico dentro de UTEL es necesario determinar el tipo de ingreso al
+                Para ingresar a cursar un grado académico dentro de Utel es necesario determinar el tipo de ingreso al
                 plan académico para
                 identificar las intenciones del alumno, existen 3 tipos de ingreso para determinar la situación del
                 alumno.
@@ -846,7 +838,7 @@
                           Esta forma aplica para estudiantes con estudios en el extranjero que desean ejercer
                           profesionalmente en México.</br></br>
 
-                          En este supuesto el estudiante debe llevar a cabo el proceso de revalidación correspondiente y
+                          En este supuesto el alumno debe llevar a cabo el proceso de revalidación correspondiente y
                           cumplir con las
                           normas establecidas. (Los alumnos que ingresen por esta opción, su egreso será el mismo que un
                           alumno regular,
@@ -922,7 +914,7 @@
                         <h5 class="card-title text-center">Dictamen técnico</h5>
                         <p class="card-text">
 
-                          Este proceso aplica para los estudiantes que ingresan a UTEL con fines académicos sin la
+                          Este proceso aplica para los estudiantes que ingresan a Utel con fines académicos sin la
                           intención de ejercer profesionalmente en México.</br></br>
 
                           Se creará una etiqueta de ingreso denominada Dictamen Técnico para identificar a los
@@ -1156,7 +1148,7 @@
                       <h5 class="card-title text-center">¿Cómo se hace el préstamo?</h5>
                       <p class="card-text">
                         Se requiere el formato de préstamo Licenciatura o Maestría; el cual debe ser llenado por el
-                        estudiante
+                        alumno
 
                         <br /><br />
                         Se requiere el archivo con la guía o bien registrar en la solicitud, que el alumno o una tercera
@@ -1216,8 +1208,8 @@
                         Se hace la solicitud por medio de Flokzu
                         <br /><br />
                         Una vez hecha la solicitud, el área de archivo responde la solicitud (aproximadamente en 48
-                        horas) y se le envía el escaneo al correo del estudiante (es importante confirmar el correo del
-                        estudiante).
+                        horas) y se le envía el escaneo al correo del alumno (es importante confirmar el correo del
+                        alumno).
                       </p>
                       <a href="https://app.flokzu.com/public/01bb9LSCANDOC" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Ir</a></br>
                     </div>
