--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -378,7 +378,7 @@
                   el Rector.
                 </br></br>
                   5.-Certificado de programa académico: Documento Institucional que se emite para nuestros egresados extranjeros interesado 
-                  en realizar el trámite de Convalidación en su país de origen, que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y certificado de estudios UTEL.
+                  en realizar el trámite de Convalidación en su país de origen, que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y certificado de estudios Utel.
                 </br></br>
                   6.-Envío internacional: Una vez que  se concluya el trámite de las apostillas se procederá a hacer el envío de la 
                   documentación en físico, siempre y cuando el pago esté reflejado en sistema 
@@ -549,7 +549,7 @@
                         <h5 class="card-title text-center">Certificado parcial</h5>
                         <p class="card-text">     
                           
-                          Documento que se proporciona al estudiante, con el cual puede comprobar el avance curricular cursado al momento, 
+                          Documento que se proporciona al alumno, con el cual puede comprobar el avance curricular cursado al momento, 
                           emitido por la SEP. El proceso de certificación demora de 1 a 3 meses y el documento se comparte en digital en 
                           archivo pdf y xml.</br></br>
       
@@ -584,7 +584,7 @@
                           <div class="col card border border-0">
         
                             <strong class="py-3 px-3"> Caracteristicas de la certificacion parcial</strong></br>
-                            Documento que se otorga al estudiante que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
+                            Documento que se otorga al alumno que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
                             autenticado por la Secretaría de Educación Pública. </br></br>
 
                             Para obtener un certificado parcial debes tener cursado mÍnimo un cuatrimestre de la Licenciatura y tu expediente 
