--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -153,7 +153,7 @@
 
   <div class="col card border-0" >
   <div class="card-body">
-  <h5 class="card-title">Servicio Social UTEL</h5>
+  <h5 class="card-title">Servicio Social Utel</h5>
   <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
   <p class="card-text">
   Teléfono:	</br> 5550897377</br>
@@ -377,11 +377,11 @@
   </thead>
   <tbody>
   <tr>
-  <td>UTEL HIGHER</td>
+  <td>Utel HIGHER</td>
   <td>01</td>
   </tr>
   <tr>
-  <td>UTEL STUDENT</td>
+  <td>Utel STUDENT</td>
   <td>02</td>
   </tr>
   <tr>
@@ -450,7 +450,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Revisar la información del estudiante o egresado: documentos, egreso, adeudos, avance curricular, pagos y más
+      Revisar la información del alumno o egresado: documentos, egreso, adeudos, avance curricular, pagos y más
     </div>
 
     <div class="col col-mb-4">
@@ -478,7 +478,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Se puede verificar si el egresado o estudiante ya habló con algún compañero anteriormente
+      Se puede verificar si el egresado o alumno ya habló con algún compañero anteriormente
     </div>
 
     <div class="col col-mb-4">
@@ -654,7 +654,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Revisar el estatus que guarda el estudiante con respecto al SS Se puede revisar fechas de inicio y término
+      Revisar el estatus que guarda el alumno con respecto al SS Se puede revisar fechas de inicio y término
     </div>
 
     <div class="col col-mb-4">
@@ -668,7 +668,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Formulario que debe de llenar el estudiante o egresado para el SS (No están todas las modalidades)
+      Formulario que debe de llenar el alumno o egresado para el SS (No están todas las modalidades)
     </div>
 
     <div class="col col-mb-4">
@@ -758,7 +758,7 @@
   <div class="row">
     <div class="col col-mb-6">
       <p class="text-center" id="ubi">
-        UTEL<br/>
+        Utel<br/>
         Calzada La Naranja  159, entre calle Esfuerzo Nacional y calle 8,<br/>
         Fraccionamiento Industrial Alce Blanco, Naucalpan, Estado de México, C.P. 53370.<br/>
       </p>
