--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -22,7 +22,7 @@
               <h4><b>¿Que son los tipos de ingreso?</b></h4></br>
               
               <a>
-              Para ingresar a cursar un grado académico dentro de UTEL es necesario determinar el tipo de ingreso al plan académico para 
+              Para ingresar a cursar un grado académico dentro de Utel es necesario determinar el tipo de ingreso al plan académico para 
               identificar las intenciones del alumno, existen 3 tipos de ingreso para determinar la situación del alumno.
 
               </a>
@@ -85,9 +85,9 @@
                             
                             Trámite ante SEP para equiparar estudios realizados fuera del sistema educativo nacional (en  el extranjero)</br></br>
 
-                            Esta forma aplica para estudiantes con estudios en el extranjero que desean ejercer profesionalmente en México.</br></br>
+                            Esta forma aplica para alumnos con estudios en el extranjero que desean ejercer profesionalmente en México.</br></br>
                             
-                            En este supuesto el estudiante debe llevar a cabo el proceso de revalidación correspondiente y cumplir con las 
+                            En este supuesto el alumno debe llevar a cabo el proceso de revalidación correspondiente y cumplir con las 
                             normas establecidas. (Los alumnos que ingresen por esta opción, su egreso será el mismo que un alumno regular, 
                             cumpliendo con su servicio social para poder realizar su registro para emisión de cédula profesional)                                 
 
@@ -122,10 +122,10 @@
                           <h5 class="card-title text-center">Dictamen Técnico</h5>
                           <p class="card-text">     
                             
-                            Este proceso aplica para los estudiantes que ingresan a UTEL con fines académicos sin la 
+                            Este proceso aplica para los alumnos que ingresan a Utel con fines académicos sin la 
                             intención de ejercer profesionalmente en México.</br></br>
 
-                            Se creará una etiqueta de ingreso denominada Dictamen Técnico para identificar a los estudiantes 
+                            Se creará una etiqueta de ingreso denominada Dictamen Técnico para identificar a los alumnos 
                             desde su inscripción y hacer el acompañamiento correspondiente
 
 
@@ -263,7 +263,7 @@
                   <h5 class="card-title">CONSTANCIA DE INSCRIPCIÓN</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text">
-                  Documento para estudiantes de futuros y de nuevo ingreso, que avala su inscripción en un programa Utel.<br/><br/>
+                  Documento para alumnos de futuros y de nuevo ingreso, que avala su inscripción en un programa Utel.<br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
                   Tiempo estimado de espera: <br/>
@@ -321,8 +321,8 @@
             <div class="col-2">
               <div class="col">
                 <strong>Tramite</strong></br>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarCosto(2)">UTEL HIGER</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarCosto(1)">UTEL LATAM</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarCosto(2)">Utel HIGER</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarCosto(1)">Utel LATAM</a>
               </div>
 
             </div>
@@ -474,7 +474,7 @@
                   <p class="card-text">
                     -Tener estatus de matriculado </br>
                     -No tener adeudos.</br>
-                    -Haber cursado como mínimo, un año en calendario como estudiante UTEL.</br>
+                    -Haber cursado como mínimo, un año en calendario como alumno Utel.</br>
                     -Haber aprobado las primeras 12 asignaturas del plan de estudio para el primer Título Intermedio
                     y las 12 subsecuentes para el segundo. </br>
                     -Documentación digital completa </br>
