--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -6,7 +6,8 @@
         <div class="row text-center">
         <div class="col"><li class="li activo">Apostilla</li></div>
         <div class="col"><li class="li">Convalidación</li></div>
-        <div class="col"><li class="li">Doble reconocimiento</li></div>
+        <div class="col"><li class="li">CINE UNESCO</li></div>
+        <div class="col"><li class="li">Equivalencia academica USA</li></div>
         <div class="col"><li class="li">CPA</li></div>
         </div>
     </ul>
@@ -460,6 +461,29 @@
           </div>
         </div>        
       </div>
+
+      <!--CINE UNESCO-->
+      <div class="bloque">
+         <div class="card border-0">
+          <h4><b>CINE UNESCO</b></h4></br>
+          
+          <a>
+            
+
+          </a>
+
+          <div class="row row-cols-2">
+            <div class="col">
+              <img src="img/titulacion/latam/unesco.PNG" alt="">
+            </div>
+            <div class="col">
+              <img src="img/titulacion/latam/unesco.PNG" alt="">
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
       <!--Equivalencia academica USA-->
       <div class="bloque">
         <div class="card border-0 py-3 px-3" >
