--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -37,7 +37,7 @@
                     Se puede trabajar el certificado total siempre y cuando cumpla con:
                     <br/><br/>
                     -Documentación entregada.<br/>
-                    -Pago de titulación cubierto.<br/>
+                    -colegiatura final cubierto.<br/>
                     -Avance curricular y estatus de egresado.
                     <br/><br/>
                     El tramite de titulación quedara pausado hasta la liberación de servicio social, posteriormente se tiene que comunicar para solicitar seguimiento.
@@ -72,9 +72,9 @@
 
                   <div class="pf card border-0 py-3 px-3" id="ceecdpdt" >
 
-                  <h6><b>¿Cuál es el costo del pago de titulación?</b></h6>
+                  <h6><b>¿Cuál es el costo de la colegiatura final?</b></h6>
                   <a>
-                    El pago de titulación tiene un costo de 15,000.00 pesos mexicanos en plataforma, hay ocasiones en que el costo puede cambiar por alguna promoción o bien se tiene incluido.
+                    El pago de la colegiatura final tiene un costo de 15,000.00 pesos mexicanos en plataforma, hay ocasiones en que el costo puede cambiar por alguna promoción o bien se tiene incluido.
                   </a>
 
                   </div>
