--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -385,11 +385,11 @@
                 </br></br>                                  
                   <b>
                     Deberá contar con el 100% de los créditos académicos y estar en estatus de egresado, no tener adeudos, documentación 
-                    completa, tener pago de titulación. El inicio del proceso depende de la fecha en que finalizó sus materias y de la 
+                    completa, tener la colegiatura final. El inicio del proceso depende de la fecha en que finalizó sus materias y de la 
                     fecha de egreso.
                   </br></br> 
                     Si va a realizar trámite de convalidación en su país deberá pagar la apostilla del título digital, si es que no están 
-                    incluidos en el pago de titulación, así como el envío internacional.
+                    incluidos en la colegiatura final, así como el envío internacional.
                     
                   </b>
                 </p>
